api component update

--- a/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/confluent_cc.yml
+++ b/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/confluent_cc.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_confluent_control_center_endpoint
   name: Confluent Control Center External
-  hosts: ["http://${CONTECO_HOSTNAME}:"]
+  hosts: ["http://:"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
