--- a/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/ekg.yml
+++ b/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/ekg.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_ekg_elasticsearch_endpoint
   name: EKG ElasticSearch External
-  hosts: ["http://${CONTECO_HOSTNAME}/confluent_poc/ekg/elasticsearch"]
+  hosts: ["http:///confluent_poc/ekg/elasticsearch"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
@@ -14,7 +14,7 @@
 - type: http
   id: external_ekg_grafana_endpoint
   name: EKG grafana External
-  hosts: ["http://${CONTECO_HOSTNAME}/confluent_poc/ekg/grafana"]
+  hosts: ["http:///confluent_poc/ekg/grafana"]
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
@@ -27,7 +27,7 @@
 - type: http
   id: external_ekg_kibana_endpoint
   name: EKG Kibana External
-  hosts: ["http://${CONTECO_HOSTNAME}/confluent_poc/ekg/kibana"]
+  hosts: ["http:///confluent_poc/ekg/kibana"]
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
