--- a/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/traefik.yml
+++ b/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/traefik.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_traefik_gateway
   name: External Traefik Gateway
-  hosts: ["http://${CONTECO_HOSTNAME}:80"]
+  hosts: ["http://:80"]
   check.response.status: [404]
   schedule: '@every 30s'
   fields:
@@ -13,7 +13,7 @@
 - type: http
   id: internal_traefik_dashboard
   name: Internal Traefik Dashboard
-  hosts: ["http://${CONTECO_HOSTNAME}:8080/dashboard"]
+  hosts: ["http://:8080/dashboard"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
