--- a/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/ekg.yml
+++ b/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/ekg.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_ekg_elasticsearch_endpoint
   name: EKG ElasticSearch External
-  hosts: ["http:///confluent_poc/ekg/elasticsearch"]
+  hosts: ["http://${CONTECO_HOSTNAME}/confluent/ekg/elasticsearch"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
@@ -14,7 +14,7 @@
 - type: http
   id: external_ekg_grafana_endpoint
   name: EKG grafana External
-  hosts: ["http:///confluent_poc/ekg/grafana"]
+  hosts: ["http://${CONTECO_HOSTNAME}/confluent/ekg/grafana"]
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
@@ -27,7 +27,7 @@
 - type: http
   id: external_ekg_kibana_endpoint
   name: EKG Kibana External
-  hosts: ["http:///confluent_poc/ekg/kibana"]
+  hosts: ["http://${CONTECO_HOSTNAME}/confluent/ekg/kibana"]
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
@@ -42,7 +42,7 @@
 - type: http
   id: internal_ekg_elasticsearch_endpoint
   name: EKG ElasticSearch Internal
-  hosts: ["http://confluent_poc_ekg_elasticsearch:9200"]
+  hosts: ["http://module_confluent_poc_ekg_elasticsearch:9200"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
@@ -55,7 +55,7 @@
 - type: http
   id: internal_ekg_grafana_endpoint
   name: EKG Grafana Internal
-  hosts: ["http://confluent_poc_ekg_grafana:3000"]
+  hosts: ["http://module_confluent_poc_ekg_grafana:3000"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
@@ -68,7 +68,7 @@
 - type: http
   id: internal_ekg_kibana_endpoint
   name: EKG Kibana Internal
-  hosts: ["http://confluent_poc_ekg_kibana:5601"]
+  hosts: ["http://module_confluent_poc_ekg_kibana:5601"]
   check.response.status: [302]
   schedule: '@every 30s'
   fields:
