--- a/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/streamsets.yml
+++ b/soleco/_component/_volumes/metrics_monitor_heartbeat_monitors_volume/streamsets.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_processor_streamsets_endpoint
   name: Processor StreamSets External
-  hosts: ["http:///confluent_poc/processor/streamsets"]
+  hosts: ["http://${CONTECO_HOSTNAME}/confluent/processor/streamsets"]
   check.response.status: [301]
   schedule: '@every 30s'
   fields:
@@ -17,7 +17,7 @@
 - type: http
   id: internal_processor_streamsets_endpoint
   name: Processor StreamSets Internal
-  hosts: ["http://confluent_poc_processor_streamsets:18630"]
+  hosts: ["http://module_confluent_poc_processor_streamsets:18630"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
