--- a/soleco/_module/_volumes/metrics_monitor_heartbeat_monitors_volume/kafka_connect.yml
+++ b/soleco/_module/_volumes/metrics_monitor_heartbeat_monitors_volume/kafka_connect.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_kafka_connect_endpoint
   name: Kafka Connect External
-  hosts: ["http://${CONTECO_HOSTNAME}:"]
+  hosts: ["http://${CONTECO_HOSTNAME}:8083"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
