--- a/soleco/_module/_volumes/metrics_monitor_heartbeat_monitors_volume/kafka_rest.yml
+++ b/soleco/_module/_volumes/metrics_monitor_heartbeat_monitors_volume/kafka_rest.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_kafka_rest_endpoint
   name: Kafka REST External
-  hosts: ["http://${CONTECO_HOSTNAME}:8088"]
+  hosts: ["http://${CONTECO_HOSTNAME}:"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
