--- a/soleco/_module/_volumes/metrics_monitor_heartbeat_monitors_volume/ksql_server.yml
+++ b/soleco/_module/_volumes/metrics_monitor_heartbeat_monitors_volume/ksql_server.yml
@@ -1,7 +1,7 @@
 - type: http
   id: external_ksql_ksql_server_endpoint
   name: KSQL Server External
-  hosts: ["http://${CONTECO_HOSTNAME}:8088"]
+  hosts: ["http://${CONTECO_HOSTNAME}:"]
   check.response.status: [200]
   schedule: '@every 30s'
   fields:
